GNU Terry Pratchett

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
     <title>Circles</title>
     <style>
       body{
